{
    "name": "CustomAction",
    "maps": [
        {
            "name": "Main",
            "id": "22c8fbfe-bf78-4ffc-bc65-29343af6e5bb",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "f7706c8d-d13e-4dce-b34a-282b7a853d1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "a8312b92-7a1c-4f5c-8fea-292c54004dfb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastAbility",
                    "type": "Button",
                    "id": "8aa14a32-3692-4d05-afcd-719339f7fd5f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FixCamera",
                    "type": "Button",
                    "id": "fb6afea4-4b55-469c-8007-889bf16b523a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "zoom",
                    "type": "Value",
                    "id": "0ca83d76-09a3-4d8c-8a4a-cfcbc1db864d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c44d448d-ef70-4b10-939e-7748ea228722",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71b76ac5-bbcf-432a-b241-54c774c35b07",
                    "path": "<Keyboard>/#(1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "442a3c12-fb5b-480e-8607-bfc123a0ed2a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "440d9617-60f6-4bfa-b4ec-526c50c69cf3",
                    "path": "<Keyboard>/#(Y)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FixCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc35b5a4-f364-40f6-a2db-56c5645763b9",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}